--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 .home .post img {
   position: absolute;
-  width: 150px;
-  height: 150px;
-  right: -60px;
-  top: -10px;
+  width: 100px;
+  height: 100px;
+  right: 0%;
+  top: 15%;
   opacity: 0.7;
 }
 .home .post {
