--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@
   position: absolute;
   width: 100px;
   height: 100px;
-  right: 0%;
-  top: 15%;
+  left: 0%;
+  top: 10%;
   opacity: 0.7;
 }
 .home .post {
   overflow: hidden;
-  padding-right: 100px;
+  padding-left: 100px;
 }
